--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Truxx.AE</title>
-    <meta http-equiv="refresh" content="0; url=https://linktr.ee/truxx.ae">
+    <meta http-equiv="refresh" content="0; url=https://linktr.ee/qamar_shahzad">
 </head>
 <body>
-    <p>Redirecting to <a href="https://linktr.ee/truxx.ae">Truxx.AE Linktree</a>...</p>
+    <p>Redirecting to <a href="https://linktr.ee/qamar_shahzad">Truxx.AE Linktree</a>...</p>
 </body>
 </html>
